import "nanopb.proto";
//import "rpc-options.proto";
import "commontypes.proto";
package barobo.Daemon;

message TcpEndpoint {
    required string address = 1 [(nanopb).max_size = 64];
    required uint32 port = 2;    
}

// Methods

message resolveSerialId {
    message In {
        required barobo.SerialId serialId = 1;
    }
    message Result {
        required Status status = 1;
        optional TcpEndpoint endpoint = 2;
    }
}

// If the daemon has acquired the dongle, relinquish it. Attempt to (re)acquire
// it after the specified time in seconds.
message cycleDongle {
    message In {
        required uint32 seconds = 1;
    }
    message Result {}
}

message sendRobotPing {
    message In {
        repeated SerialId destinations = 1 [(nanopb).max_count = 8];
    }
    message Result {
        required Status status = 1;
    }
}

// TODO: getDongleSerialId method

// Broadcasts

message dongleEvent {
    // TODO probably want a form factor here. For that matter, maybe this
    // should be a more generic devicePluggedIn broadcast.
    required Status status = 1;
}

message robotEvent {
    required barobo.SerialId serialId = 1;
    required barobo.RobotEvent event = 2;
}